--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "moment": "^2.29.1"
+    "heikinashi": "^1.0.6",
+    "moment": "^2.29.1",
+    "moving-averages": "^4.0.6"
   }
 }
